--- a/actions-ressortissants/actions.html
+++ b/actions-ressortissants/actions.html
@@ -29,7 +29,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Fin fontawsome -->
-    <link rel="stylesheet" href="ressortissants.css">
+    <link rel="stylesheet" href="actions.css">
     <link rel="stylesheet" href="../style/style.css">
 </head>
 
@@ -168,30 +168,20 @@
         </script>
 
     </header>
-    <main id="main">
+    <section id="accueil">
         <div class="banner">
             <div class="content-banner">
-                <h4>NOS ACTIONS POUR UN NUMERIQUE INCLUSIF</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo voluptas pariatur itaque consequatur eius
-                    perspiciatis aspernatur? Consequuntur distinctio, nulla pariatur consectetur quos nihil molestias quam amet
-                    delectus enim deserunt in?</p>
+                <h4>Gestion de projet agile</h4>
+                <p>Simplon.co s’engage depuis 2016 pour l‘inclusion socio-professionnelle des étranger.ère.s en leur proposant une offre de
+                formation adaptée à leurs besoins : des formations numériques avec des cours de français intensifs en fonction de leurs
+                projets et de leurs niveaux.
+                ​​​​​​​Avec nos partenaires – en France comme à l’international – nous souhaitons offrir la possibilité à toute personne
+                de se former et d’être accompagnée vers un métier qualifié.</p>
                 <div class="chemin">
-                    <span>Acueil / A propos / Anti-FAQ</span>
+                    <bouton>Acueil / Candidats</bouton>
                 </div>
             </div>
         </div>
-        <section id="action">
-            <h3>Nos actions pour un numérique inclusif</h3>
-            <p>Au coeur du projet de Simplon.co : le numérique comme levier d’inclusion, d’insertion et d’emploi, mais également un
-            catalyseur de mixité, de diversité et d’innovation sociale.</p>
-            <p>Simplon.co met ainsi son énergie au service de l’inclusion de publics spécifiques (personnes en situation de handicap,
-            réfugiées, femmes, jeunes non diplômés, primo-arrivants, etc.) au sein des formations Simplon tout en favorisant autant
-            que possible la mixité de genre, d’âge et d’origines sociale et géographique.</p>
-            <p>Cette approche très élargie de la diversité est au bénéfice des progressions pédagogiques individuelles de chacun des
-            Simploniens et un parti-pris clair au coeur de l’ADN de Simplon. C’est également pour cela que nos Fabriques sont
-            implantées dans les territoires ruraux, en Outre-mer et pas seulement dans les quartiers populaires et les grandes
-            agglomérations.</p>
-        </section>
         <footer class=" text-center text-lg-start  text-muted ">
             <!-- Section: Social media -->
             <section class="antifaq container-fluid ">
@@ -306,7 +296,9 @@
             </div>
             <!-- Copyright -->
         </footer>
-    </main>
+    </section>
+    <!-- section footer -->
+    <!-- end footer -->
 </body>
 
 </html>
