finition de la page cloud-devops

--- a/cloud-devops/cloud.html
+++ b/cloud-devops/cloud.html
@@ -182,7 +182,7 @@
     </div>
     <div class="container cloud-carte">
         <h3>Le cloud-devops offre 6 formations</h3>
-        <div class="container cloud-carte-card d-flex justify-content-center gap-4 p-2">
+        <div class=" cloud-carte-card d-flex justify-content-center gap-4 p-2">
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-gratuite/equipement-eclairage-au-neon-cree-motifs-vagues-abstraits-dans-couleurs-vibrantes-generees-par-ia_188544-56000.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -200,7 +200,7 @@
                 </div>
               </div>
         </div>
-        <div class="container cloud-carte-card d-flex justify-content-center gap-4 p-2">
+        <div class=" cloud-carte-card d-flex justify-content-center gap-4 p-2">
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/vecteurs-libre/illustration-developpement-degrade_23-2149370941.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -218,7 +218,7 @@
                 </div>
               </div>
         </div>
-        <div class="container cloud-carte-card d-flex justify-content-center gap-4 p-2">
+        <div class=" cloud-carte-card d-flex justify-content-center gap-4 p-2">
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/vecteurs-libre/design-plat-devops-illustration_23-2149364438.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph" class="card-img-top" alt="...">
                 <div class="card-body">
