--- a/agile/agile.html
+++ b/agile/agile.html
@@ -194,20 +194,20 @@
                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <div class="part-ele">
                                 <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
-                                <p class="list-agile"><span class="puce"></span><span>Évaluer la criticité des risques liés aux métiers du commanditaire
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Évaluer la criticité des risques liés aux métiers du commanditaire
                                         sur le système d’information</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Analyser l’architecture d’un système d’information et des
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser l’architecture d’un système d’information et des
                                         protocoles de sécurité du commanditaire</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Élaborer une stratégie de collecte d'événements provenant d’un
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaborer une stratégie de collecte d'événements provenant d’un
                                         système d’information</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Programmer les règles de filtre du collecteur permettant la
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Programmer les règles de filtre du collecteur permettant la
                                         collecte des événements à surveiller</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Analyser les événements collectés afin de détecter des incidents
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser les événements collectés afin de détecter des incidents
                                         de sécurité</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Qualifier un incident de sécurité détecté</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Identifier les tactiques et techniques d’attaques ainsi que les
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Qualifier un incident de sécurité détecté</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Identifier les tactiques et techniques d’attaques ainsi que les
                                         objectifs de l’attaquant</span></p>
-                                <p class="list-agile"><span class="puce"></span><span>Rédiger un rapport d’alerte sous la forme d’un compte-rendu
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Rédiger un rapport d’alerte sous la forme d’un compte-rendu
                                         d’incident</span></p>
                                 <p class="list-agile-last">Concevoir un système de veille technologique permettant de collecter, classifier, analyser et
                                     diffuser l’information
@@ -217,11 +217,11 @@
                             <div class="part-ele">
                                 <h3 class="title-ele">CERTIFICATION</h3>
                                 <h4>Parcours délivrant deux certifications Simploninscrites au répertoire spécifique:</h4>
-                                <p class="list-agile"><span class="puce"></span><span>RS5021“Analyser les incidents de sécurité détectés”
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>RS5021“Analyser les incidents de sécurité détectés”
                                     sur le système d’information</span></p>
-                                    <p class="list-agile"><span class="puce"></span><span>RS5020 “Surveiller un système d’information sur des critères de sécurité informatique”</span></p>
+                                    <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>RS5020 “Surveiller un système d’information sur des critères de sécurité informatique”</span></p>
                                     <h4>Voie d’accès à la certification :</h4>
-                                <p class="list-agile"><span class="puce"></span><span>Après un parcours de formation continue ;</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Après un parcours de formation continue ;</span></p>
                             </div>
                             <hr class="hr-proto">
                             <div class="part-ele">
@@ -260,18 +260,100 @@
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
                             <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
-                            <p class="list-agile"><span class="puce"></span><span>Évaluer la criticité des risques liés aux métiers du commanditaire sur le système d’information</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Analyser l’architecture d’un système d’information et des protocoles de sécurité du commanditaire</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Élaborer une stratégie de collecte d'événements provenant d’un système d’information</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Programmer les règles de filtre du collecteur permettant la collecte des événements à surveiller</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Analyser les événements collectés afin de détecter des incidents de sécurité</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Qualifier un incident de sécurité détecté</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Identifier les tactiques et techniques d’attaques ainsi que les objectifs de l’attaquant</span></p>
-                            <p class="list-agile"><span class="puce"></span><span>Rédiger un rapport d’alerte sous la forme d’un compte-rendu d’incident</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Évaluer la criticité des risques liés aux métiers du commanditaire sur le système d’information</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser l’architecture d’un système d’information et des protocoles de sécurité du commanditaire</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaborer une stratégie de collecte d'événements provenant d’un système d’information</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Programmer les règles de filtre du collecteur permettant la collecte des événements à surveiller</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser les événements collectés afin de détecter des incidents de sécurité</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Qualifier un incident de sécurité détecté</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Identifier les tactiques et techniques d’attaques ainsi que les objectifs de l’attaquant</span></p>
+                            <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Rédiger un rapport d’alerte sous la forme d’un compte-rendu d’incident</span></p>
                             <p class="list-agile-last">Concevoir un système de veille technologique permettant de collecter, classifier, analyser et diffuser l’information
                             liés à la cybersécurité aux différents acteurs de l’organisation ou du commanditaire</p>
                         </div>
-                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">g,fbkfkblf</div>
+                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                            <div class="part-ele">
+                                <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Évaluer la
+                                        criticité des risques liés aux métiers du commanditaire
+                                        sur le système d’information</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser
+                                        l’architecture d’un système d’information et des
+                                        protocoles de sécurité du commanditaire</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaborer une
+                                        stratégie de collecte d'événements provenant d’un
+                                        système d’information</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Programmer
+                                        les règles de filtre du collecteur permettant la
+                                        collecte des événements à surveiller</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser les
+                                        événements collectés afin de détecter des incidents
+                                        de sécurité</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Qualifier un
+                                        incident de sécurité détecté</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Identifier
+                                        les tactiques et techniques d’attaques ainsi que les
+                                        objectifs de l’attaquant</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Rédiger un
+                                        rapport d’alerte sous la forme d’un compte-rendu
+                                        d’incident</span></p>
+                                <p class="list-agile-last">Concevoir un système de veille technologique permettant de collecter, classifier,
+                                    analyser et
+                                    diffuser l’information
+                                    liés à la cybersécurité aux différents acteurs de l’organisation ou du commanditaire</p>
+                            </div>
+                            <hr class="hr-proto">
+                            <div class="part-ele">
+                                <h3 class="title-ele">CERTIFICATION</h3>
+                                <h4>Parcours délivrant deux certifications Simploninscrites au répertoire spécifique:</h4>
+                                <p class="list-agile"><i class="fa-solid fa-circle"
+                                        style="color: #CE0033; font-size: 0.8em;"></i><span>RS5021“Analyser les incidents de sécurité détectés”
+                                        sur le système d’information</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>RS5020
+                                        “Surveiller un système d’information sur des critères de sécurité informatique”</span></p>
+                                <h4>Voie d’accès à la certification :</h4>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Après un
+                                        parcours de formation continue ;</span></p>
+                            </div>
+                            <hr class="hr-proto">
+                            <div class="part-ele">
+                                <h3 class="title-ele">PRIX DE LA FORMATION</h3>
+                                <p class="list-agile-last">Le coût horaire de cette formation (incluant le passage de certifications) varie de 12
+                                    euros à 27 euros de l'heure (hors
+                                    majoration ou modulation liée à un dispositif spécifique). Pour les apprenants, cette formation est
+                                    intégralement prise
+                                    en charge. Simplon s'assure du financement de cette formation au travers de différents dispositifs à savoir Pôle
+                                    Emploi,
+                                    OPCO, Fonds européens, Régions, CPF, Entreprise (sur devis dans le cadre de la formation de leurs salariés, ou
+                                    au
+                                    travers d'un reste à charge dans le cadre de l'alternance),etc.</p>
+                            </div>
+                            <div class="part-ele">
+                                <h3 class="title-ele">CHIFFRE CLES DU SECTEUR</h3>
+                                <div class="container">
+                                    <div class="offre-sector row">
+                                        <div class="col-lg-4 col-md-12">
+                                            <div class="of-div container-cs">
+                                                <h3>+3,6%</h3>
+                                                <p>C’est la croissance du secteur du numérique en 2018</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-12">
+                                            <div class="of-div container-cs">
+                                                <h3>232 000</h3>
+                                                <p>C’est le nombre de postes à pourvoir entre 2017 et 2027</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4 col-md-12">
+                                            <div class="of-div container-cs">
+                                                <h3>41 764 £</h3>
+                                                <p>C’est le revenu annuel brut moyen d’un-e développeur-se en France</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
