--- a/qui-sommes-nous/qsnous.html
+++ b/qui-sommes-nous/qsnous.html
@@ -59,7 +59,7 @@
                             A Propos
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Qui sommes nous ?</a></li>
+                            <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
                             <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
                             <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
@@ -75,10 +75,10 @@
                             <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
                             <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
                             <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
-                            <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
+                            <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
                             <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
-                            <li><a class="dropdown-item" href="#">Blockchain</a></li>
+                            <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -87,7 +87,7 @@
                             Alternances
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Faire ma formation en alternance</a></li>
+                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation en alternance</a></li>
                             <li><a class="dropdown-item" href="#">Recruter en alternance</a></li>
                         </ul>
                     </div>
@@ -97,7 +97,7 @@
                             Candidats
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Nos actions pour les femmes</a></li>
+                            <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions pour les femmes</a></li>
                             <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
                         </ul>
@@ -304,7 +304,7 @@
                                             viewBox="0 0 16 16">
                                             <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                         </svg>Accessibilite</a></li>
-                                    <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
+                                    <li><a href=""><a href="../mentions-légales/metionlegale.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
                                             viewBox="0 0 16 16">
                                             <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                         </svg>Mention legales</a></li>
