--- a/actions-ressortissants/actions.html
+++ b/actions-ressortissants/actions.html
@@ -78,7 +78,7 @@
                             <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
                             <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
-                            <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
+                            <li><a class="dropdown-item" href="../anti-faq/antifaq.html">Anti-FAQ</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
