--- a/blockchain/blockchain.html
+++ b/blockchain/blockchain.html
@@ -92,7 +92,7 @@
                             <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
                             <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
-                            <li><a class="dropdown-item" href="#">Blockchain</a></li>
+                            <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
