--- a/metavers/metaverse.html
+++ b/metavers/metaverse.html
@@ -70,7 +70,7 @@
                             <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
                             <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
                             <li><a class="dropdown-item" href="#">Blockchain</a></li>
                         </ul>
                     </div>
