--- a/fondamentaux-numerique/fondamentaux-num.html
+++ b/fondamentaux-numerique/fondamentaux-num.html
@@ -87,7 +87,7 @@
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
                             <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
+                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
                             <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
                             <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
