--- a/anti-faq/antifaq.html
+++ b/anti-faq/antifaq.html
@@ -58,7 +58,7 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
@@ -74,11 +74,13 @@
                             A Propos
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Qui sommes nous ?</a></li>
-                            <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
-                            <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
-                            <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
-                            <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
+                            <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
+                            <li><a class="dropdown-item" href="../pedagogie/pedagogie.html">Notre pédagogie</a></li>
+                            <li><a class="dropdown-item" href="../réseau-de-fabrique/reseau-de-fabrique.html">Notre réseau
+                                    de fabriques</a></li>
+                            <li><a class="dropdown-item" href="../numerique-inclusif/numeriqueInclusif.html">Nos actions
+                                    pour un numérique inclusif</a></li>
+                            <li><a class="dropdown-item" href="../anti-faq/antifaq.html">Anti-FAQ</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -87,13 +89,17 @@
                             Nos Formations
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
-                            <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
-                            <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
-                            <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
-                            <li><a class="dropdown-item" href="#">Blockchain</a></li>
+                            <li><a class="dropdown-item"
+                                    href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et
+                                    cybersécurité</a></li>
+                            <li><a class="dropdown-item" href="../infrastructure-cuberscurite/">Développement
+                                    d'applications</a></li>
+                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux
+                                    numériques</a></li>
+                            <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
+                            <li><a class="dropdown-item" href="../Data-IA/">Data & intelligence artificielle</a></li>
+                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -102,7 +108,8 @@
                             Alternances
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Faire ma formation en alternance</a></li>
+                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation
+                                    en alternance</a></li>
                             <li><a class="dropdown-item" href="#">Recruter en alternance</a></li>
                         </ul>
                     </div>
@@ -112,9 +119,11 @@
                             Candidats
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Nos actions pour les femmes</a></li>
-                            <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
-                            <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
+                            <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions
+                                    pour les femmes</a></li>
+                            <li><a class="dropdown-item" href="#">Personnes en
+                                    situation de handicap</a></li>
+                            <li><a class="dropdown-item" href="../actions-ressortissants/actions.html">Nos actions pour les refugés étrangers</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -166,7 +175,7 @@
                 barreSearch.style.top = '40vh';
             });
         </script>
-
+    
     </header>
     <main id="main">
         <div class="banner">
