--- a/accueil/accueil.html
+++ b/accueil/accueil.html
@@ -182,7 +182,7 @@
                             Rejoignez un réseau de plus de 25 000 apprenants et apprenantes. Vous souhaitez vous
                             aussi intégrer un parcours de formation Simplon ou être conseillé-e dans votre parcours ?</p>
                             <div class="cta-banner">
-                                <a href="">Contactez-Nous</a>
+                                <a href="../contact/contact.html">Contactez-Nous</a>
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                             lectus integer turpis ante laoreet donec. Lorem eu donec consequat ipsum. Ut dictum cras
                             vitae mattis ut sed tempus.</p>
                             <div class="cta-banner">
-                                <a href="">En Savoir Plus</a>
+                                <a href="../analyse-cybersécurité-spécialisation/cybersecurite.html">En Savoir Plus</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -242,7 +242,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -315,7 +315,7 @@
                             <div class="bouton-card">
                                 <button id="btn-card" class="btn-card"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
                                         class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    <span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span>
+                                    <a href="../dev-front/dev-front.html"><span id="cta" class="cta">DECOUVRIR NOS FORMATIONS</span></a>
                                 </button>
                             </div>
                         </div>
@@ -341,9 +341,12 @@
                                 développeur-se, ou pour entamer un parcours dans le numérique, l'Apple Foundation Program est accessible aux débutants
                                 comme aux plus confirmés.</p>
                                 <div class="bouton-card">
-                                    <button id="btn-card" class="btn-card">
-                                        <i class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    </button>
+                                    <div class="bouton-card">
+                                        <button id="btn-card" class="btn-card btn-card-dup"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
+                                                class="fa-solid fa-chevron-right i-2" id="i-2"></i>
+                                            <a href="../dev-front/dev-front.html"><span id="cta" class="cta cta-dup">DECOUVRIR</span></a>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mi-right">
@@ -365,9 +368,12 @@
                                 Donnez un souffle nouveau à votre carrière professionnelle. Devenez avec Simplon et Meta, Développeur-euse Réalité
                                 Virtuelle /Réalité Augmentée - 3D temps réel, ou encore Technicien-ne d’Assistance en Réalité Virtuelle.</p>
                                 <div class="bouton-card">
-                                    <button id="btn-card" class="btn-card">
-                                        <i class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    </button>
+                                    <div class="bouton-card">
+                                        <button id="btn-card" class="btn-card btn-card-dup"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
+                                                class="fa-solid fa-chevron-right i-2" id="i-2"></i>
+                                            <a href="../dev-front/dev-front.html"><span id="cta" class="cta cta-dup">DECOUVRIR</span></a>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mi-right">
@@ -388,9 +394,12 @@
                                 développement d’applicatifs informatiques autour de l’IA et de la Data Science. L’Ecole IA Microsoft By Simplon est
                                 engagée en matière d’égalité des chances.</p>
                                 <div class="bouton-card">
-                                    <button id="btn-card" class="btn-card">
-                                        <i class="fa-solid fa-chevron-right i-2" id="i-2"></i>
-                                    </button>
+                                    <div class="bouton-card">
+                                        <button id="btn-card" class="btn-card btn-card-dup"><i class="fa-solid fa-minus i-1" id="i-1"></i><i
+                                                class="fa-solid fa-chevron-right i-2" id="i-2"></i>
+                                            <a href="../dev-front/dev-front.html"><span id="cta" class="cta cta-dup">DECOUVRIR</span></a>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                             <div class="mi-right">
