--- a/actions-ressortissants/actions.html
+++ b/actions-ressortissants/actions.html
@@ -579,7 +579,7 @@
     </section>
     <!-- section footer -->
     <!-- end footer -->
-    <script src="carte-1.js"></script>
+    <script src="../accueil/carte-1.js"></script>
 </body>
 
 </html>
