--- a/Data-IA/dataIa.html
+++ b/Data-IA/dataIa.html
@@ -187,16 +187,19 @@
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-gratuite/concept-transformation-numerique-fond-puce-technologie-ia_53876-124669.jpg?size=626&ext=jpg&ga=GA1.2.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de data et intelligence artifiicielle - Spécialisation</h5>
-                  <p class="card-text">La méthode de data et intelligence artifiicielle est une approche qui vise à améliorer la collaboration et la communication entre les équipes de data et intelligence artificielle</p>
-                  <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
+                  <h5 class="card-title">École IA Microsoft By Simplon - Développeur-se en intelligence artificielle</h5>
+                  <p class="card-text">Le métier de développeur-se en Intelligence Artificielle prend une importante croissance dans les nouveaux métiers de la
+                data et l’IA puisque le recours à l’IA s’industrialise dans les entreprises et les organisations.</p>
+                  <a href="../developpeur-ia/developpeuria.html" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-gratuite/concept-collage-reconnaissance-faciale_23-2150038883.jpg?size=626&ext=jpg&ga=GA1.2.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de data et intelligence artifiicielle - Spécialisation</h5>
-                  <p class="card-text">La méthode de data et intelligence artifiicielle est une approche qui vise à améliorer la collaboration et la communication entre les équipes de data et intelligence artificielle</p>
+                  <h5 class="card-title">AI Business School TPE/PME</h5>
+                  <p class="card-text">Microsoft a mis en place des AI Business Schools, dont l'objectif est de permettre aux dirigeants et dirigeantes
+                d'entreprises et aux décideurs et décideuses de se former aux fondamentaux de l'intelligence artificielle et d'en
+                comprendre les enjeux et les stratégies associées.</p>
                   <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
@@ -205,8 +208,11 @@
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/vecteurs-libre/visualisation-abstraite-donnees-volumineuses-resume-poutres-colorees-rougeoyantes_1217-2379.jpg?size=626&ext=jpg&ga=GA1.2.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de data et intelligence artifiicielle - Spécialisation</h5>
-                  <p class="card-text">La méthode de data et intelligence artifiicielle est une approche qui vise à améliorer la collaboration et la communication entre les équipes de data et intelligence artificielle</p>
+                  <h5 class="card-title">SAS de pré-qualification aux métiers du numérique - Intelligence Artificielle</h5>
+                  <p class="card-text">Cette formation pré-qualifiante a pour objectif d’initier aux compétences professionnelles en développement
+                d’applications, notamment à l’aide de CMS, des technologies web et de Python.
+                Cette initiation concerne toutes les étapes du cycle de vie d’une application et les outils techniques d’un développeur
+                et d'une développeuse en intelligence artificielle.</p>
                   <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
