--- a/developpeur-ia/developpeuria.html
+++ b/developpeur-ia/developpeuria.html
@@ -29,7 +29,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Fin fontawsome -->
-    <link rel="stylesheet" href="cybersecurite.css">
+    <link rel="stylesheet" href="developpeuria.css">
     <link rel="stylesheet" href="../style/style.css">
 </head>
 
@@ -171,9 +171,10 @@
     <main id="accueil">
         <div class="banner">
             <div class="content-banner">
-                <h4>Analyse cybersécurité - spécialisation</h4>
+                <h4>Technicienne d'assistance en informatique - spécialisation</h4>
                 <div class="chemin">
-                    <p><a href="../accueil/accueil.html" style="color: white;">Accueil /</a><a href="../infrastructure-cuberscurite/infraCyber.html" style="color: white;">Nos formations</a></p>
+                   <p ><a href="../accueil/accueil.html" style="color: white;">Accueil</a> <a href="../Data-IA/dataIa.html" style="color: white;">/ Nos
+                    formations</a></p> 
                 </div>
             </div>
         </div>
@@ -193,14 +194,21 @@
                     <div class="content-ele tab-content" id="nav-tabContent">
                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                             <div class="part-ele">
-                                <h3>Spécialisation en analyse cybersécurité</h3>
-                                <p>L’analyse cybersécurité est une spécialisation qui permet à un informaticien ou une informaticienne de réaliser la détection d’incidents de sécurité sur un système d’information et de les analyser en cas d’incidents de sécurité.</p>
-                                <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyse des métiers du commanditaire et évaluation globale de la vulnérabilité de son système d’information</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaboration et mise en œuvre d’une stratégie de collecte d’événements en provenance du système d’information du commanditaire</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaboration de l’analyse des événements de sécurité</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyse et gestion des incidents de sécurité</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaboration et mise en œuvre d’une stratégie de veille technologique pour renforcer la gestion des risques</span></p>
+                                <h3>Developpeur IA</h3>
+                                <p>Le métier de développeur-se en Intelligence Artificielle prend une importante croissance dans les nouveaux métiers de la
+                                data et l’IA puisque le recours à l’IA s’industrialise dans les entreprises et les organisations. Ainsi, plus de 3 500
+                                postes de développeur et développeuse en Intelligence Artificielle seraient à pourvoir d’ici 2023*.</p>
+                                <p>Engagée en matière d’égalité des chances et convaincue que ces opportunités d’emplois ne doivent pas être réservées à
+                                une élite, Microsoft a créé en 2018 en partenariat avec Simplon une école unique et alternative : l’École IA Microsoft
+                                By Simplon.</p>
+                                <p>L’Ecole IA Microsoft By Simplon a permis de former plus de 400 demandeurs et demandeuses d’emploi en France depuis sa
+                                création. Forts de ce succès, Microsoft et Simplon développent un programme de formation aux métiers de l'IA : L’Ecole
+                                IA Microsoft By Simplon.</p>
+                                <h4 style="color: var(--rouge);">Le métier de développeur-se en Intelligence Artificielle</h4>
+                                <p>Il/elle est donc spécialiste du développement informatique, du génie logiciel et des interfaces Hommes-Machines, avec
+                                une très bonne connaissance des technologies d’IA/Data Science, du secteur ou de la fonction d’application des données
+                                traitées.</p>
+
                                 <h4 class="part-ele-item">Les débouchés /suite de parcours</h4>
                                 <p>InserJeunes : un service d’aide à l’orientation des jeunes en voie professionnelle est disponible.</p>
                             </div>
@@ -252,15 +260,24 @@
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
                             <div class="part-ele">
                                 <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Évaluer la criticité des risques liés aux métiers du commanditaire sur le système d’information</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser l’architecture d’un système d’information et des protocoles de sécurité du commanditaire</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaborer une stratégie de collecte d'événements provenant d’un système d’information</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Programmer les règles de filtre du collecteur permettant la collecte des événements à surveiller</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser les événements collectés afin de détecter des incidents de sécurité</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Qualifier un incident de sécurité détecté</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Identifier les tactiques et techniques d’attaques ainsi que les objectifs de l’attaquant</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Rédiger un rapport d’alerte sous la forme d’un compte-rendu d’incident</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Concevoir un système de veille technologique permettant de collecter, classifier, analyser et diffuser l’information liés à la cybersécurité aux différents acteurs de l’organisation ou du commanditaire</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Qualifier les données grâce à des outils d’analyse et de visualisation de données en vue de vérifier leur adéquation
+                                avec le projet</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Concevoir une base de données analytique avec l’approche orientée requêtes en vue de la mise à disposition des données
+                                pour un traitement analytique ou d’intelligence artificielle</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Programmer l’import de données initiales nécessaires au projet en base de données, afin de les rendre exploitables par
+                                un tiers, dans un langage de programmation adapté et à partir de la stratégie de nettoyage des données préalablement
+                                définie</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Concevoir le programme d’intelligence artificielle adapté aux données disponibles afin de répondre aux objectifs
+                                fonctionnels du projet, à l’aide des algorithmes, outils et méthodes standards, notamment de machine learning et de deep
+                                learning</span></p>
+
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Développer le programme d’intelligence artificielle selon les données du projet et les éléments de conception définis,
+                                en exploitant les algorithmes et les outils standards couramment utilisés dans le domaine</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Développer l’interaction entre les fonctionnalités de l’application et l’intelligence artificielle dans le respect des
+                                objectifs visés et des bonnes pratiques du domaine</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Modifier les paramètres et composants de l’intelligence artificielle afin d’ajuster aux objectifs du projet les
+                                capacités fonctionnelles de l’algorithme à l’aide de techniques d’optimisation
+                                </p>
                             </div>
                             <hr class="hr-proto">
                             <div class="part-ele">
@@ -311,8 +328,8 @@
                             <div class="part-ele">
                                 <h4>Les prérequis</h4>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Très forte motivation, à prouver !</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Niveau Bac+2 informatique, systèmes et réseaux ou expérience professionnelle significative dans le domaine.</span></p>
-                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Ce que nous cherchons ? De la curiosité, de la créativité, une bonne expression à l’oral et à l’écrit, une représentation claire du métier… et bien sûr, l’envie de s’engager dans une formation intense !</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Découvrir le support informatique soi-même (ex. plateformes d'apprentissage en ligne)</span></p>
+                                <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Explorer les principaux métiers du numérique, ce qu’ils font, à quoi ils servent</span></p>
                                 <h4 class="part-ele-item">Pour les personnes en situation de handicap</h4>
                                 <p>Les formations Simplon sont ouvertes à toutes et tous, inclusives et accueillantes pour les personnes en situation de handicap. <strong>Concernant les modalités physiques de la formation,</strong>c’est environ 7h par jour de station assise, dans un open space (donc parfois bruyant), avec la nécessité de se déplacer dans la salle et d’éventuellement transporter son ordinateur. <strong>Concernant les modalités organisationnelles,</strong> il y a possibilité de télétravail ou, en présentiel, d’isolement dans une salle pour se reposer, même s’il y a la nécessité de travailler régulièrement en groupe. </p>
                                 <p><strong>La mise en place d’aménagements est possible, n'hésitez pas à prendre contact avec l'équipe de  la Fabrique.</strong> En fonction des aménagements, ceux-ci se font soit uniquement avec le ou la référente handicap et l’équipe pédagogique soit avec l’appui des Services Public de l’Emploi et les partenaires spécialisés (Agefiph et ressource Handicap Formation). </p>
@@ -409,7 +426,7 @@
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30"
+                                        <li><a href=""><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30"
                                                         height="30" fill="currentColor" class="bi bi-dot"
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
