--- a/infrastructure-cuberscurite/infraCyber.html
+++ b/infrastructure-cuberscurite/infraCyber.html
@@ -187,16 +187,18 @@
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-gratuite/concept-collage-html-css-pirate_23-2150061984.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
-                  <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
+                  <h5 class="card-title">Technicien-ne d’assistance en informatique</h5>
+                  <p class="card-text">De l’assistance aux utilisateurs, en passant par la mise en service d'équipements numériques, le technicien ou la
+                technicienne d'assistance en informatique intervient sur les éléments de l'infrastructure.</p>
+                  <a href="../technicienne-assistance-informatique/technicienne-informatique.html" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-premium/systeme-protection-numerique-securite-concept-securite-technologique_142243-71.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
+                  <h5 class="card-title">Analyse cybersécurité - spécialisation</h5>
+                  <p class="card-text">L’analyse cybersécurité est une spécialisation qui permet à un informaticien ou une informaticienne de réaliser la
+                détection d’incidents de sécurité sur un système d’information et de les analyser en cas d’incidents de sécurité.</p>
                   <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
@@ -205,38 +207,25 @@
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-gratuite/concept-securite-securite-entreprise-entreprise-protection_53876-64964.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
+                  <h5 class="card-title">Administrateur-trice d’infrastructures sécurisées</h5>
+                  <p class="card-text">L'administrateur / l'administratrice d'infrastructures sécurisées s’occupe des infrastructures informatiques dont il
+                assure l'installation, le paramétrage, la sécurisation, le maintien en conditions opérationnelles et en conditions de
+                sécurités.</p>
                   <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
             <div class="card" style="width: 30rem;">
                 <img src="https://img.freepik.com/photos-premium/composition-du-cadenas-reseau-connexions-creees-aide-technologie-generative-ai_772924-1794.jpg?size=626&ext=jpg&ga=GA1.1.359486737.1694125754&semt=ais" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
+                  <h5 class="card-title">Technicien-ne supérieur-e systèmes et réseaux - Spécialité surveillance de sécurité</h5>
+                  <p class="card-text">Le/la technicien-ne systèmes, réseaux et surveillance de sécurité est un-e informaticien-ne qui participe à
+                l’installation, la configuration, la sécurisation et la maintenance des équipements informatiques et d’infrastructure IT
+                d’une entreprise. Il/elle assure également la relation avec les usagers lors d’incidents techniques, de sécurité ou de
+                prise de poste.</p>
                   <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
         </div>
-        <!-- <div class=" cloud-carte-card d-flex justify-content-center gap-4 p-2">
-            <div class="card" style="width: 30rem;">
-                <img src="https://img.freepik.com/vecteurs-libre/design-plat-devops-illustration_23-2149364438.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
-                  <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
-                </div>
-              </div>
-            <div class="card" style="width: 30rem;">
-                <img src="https://img.freepik.com/vecteurs-libre/symbole-infini-effet-lumineux_23-2147854724.jpg?size=626&ext=jpg&ga=GA1.2.12207566.1692912950&semt=sph" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Administrer avec la méthode de l'infrastructure et cybersecurite - Spécialisation</h5>
-                  <p class="card-text">La méthode de l'infrastructure et cybersecurite est une approche qui vise à améliorer la collaboration et la communication entre les équipes de l'infrastrucuture et cybersecurite</p>
-                  <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
-                </div>
-              </div>
-        </div> -->
     </div>
 
     <!-- fin contenu -->
