--- a/developpeur-ia/developpeuria.html
+++ b/developpeur-ia/developpeuria.html
@@ -171,7 +171,7 @@
     <main id="accueil">
         <div class="banner">
             <div class="content-banner">
-                <h4>Technicienne d'assistance en informatique - spécialisation</h4>
+                <h4>Developpeur IA</h4>
                 <div class="chemin">
                    <p ><a href="../accueil/accueil.html" style="color: white;">Accueil</a> <a href="../Data-IA/dataIa.html" style="color: white;">/ Nos
                     formations</a></p> 
